--- a/websiteold/package.json
+++ b/websiteold/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "kamarwebapp",
+  "name": "website_main",
   "version": "1.0.0",
-  "description": "A Better Kamar Portal",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "B John",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "author": "",
   "license": "ISC"
 }
