--- a/kamar-web-app-front-end/package.json
+++ b/kamar-web-app-front-end/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@tanem/svg-injector": "^10.1.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-svg": "^14.0.10",
     "semantic-ui-react": "^2.0.3",
     "url-loader": "^4.1.1",
     "web-vitals": "^1.1.2"
